--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -12,6 +12,7 @@
             <link href = "https://fonts.googleapis.com/css?family = Philosopher" rel = "stylesheet">
             <link href = "{% static 'css/style.css' %}" rel = "stylesheet">
             <link rel = "stylesheet" href = "https://unpkg.com/ress/dist/ress.min.css">
+            <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css">
             <script src="https://use.fontawesome.com/releases/v6.1.0/js/all.js" crossorigin="anonymous"></script>
 
             <div class="box-wrap">
@@ -48,7 +49,7 @@
                     
                 </header>
             </div>
-
+            
             {% block header %}{% endblock %}
 
             {% block contents %}{% endblock %}
